Project

General

Profile

Actions

Bug #20546

closed

buggy osd down warnings by subtree vs crush device classes

Added by Sage Weil almost 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The subtree-based down (host down etc) messages appear to be confused by the shadow hieararchy from crush device classes.

e.g.,

    health: HEALTH_ERR
            1 host (0 osds) down
            18 osds down

from
root@stud:~# ceph osd tree down
2017-07-07 13:41:58.803361 7f6f193a1700 -1 WARNING: all dangerous and experimental features are enabled.
2017-07-07 13:41:58.816763 7f6f193a1700 -1 WARNING: all dangerous and experimental features are enabled.
ID  WEIGHT   TYPE NAME          UP/DOWN REWEIGHT PRIMARY-AFFINITY 
-12 63.66447 root default~hdd                                     
-11 25.46579     host stud~hdd                                    
 42  1.81898         osd.42        down  1.00000          1.00000 
 43  1.81898         osd.43        down  1.00000          1.00000 
 44  1.81898         osd.44        down  1.00000          1.00000 
 45  1.81898         osd.45        down  1.00000          1.00000 
 46  1.81898         osd.46        down  1.00000          1.00000 
 47  1.81898         osd.47        down  1.00000          1.00000 
 48  1.81898         osd.48        down  1.00000          1.00000 
 49  1.81898         osd.49        down  1.00000          1.00000 
 50  1.81898         osd.50        down  1.00000          1.00000 
 51  1.81898         osd.51        down  1.00000          1.00000 
 52  1.81898         osd.52        down  1.00000          1.00000 
 53  1.81898         osd.53        down  1.00000          1.00000 
 54  1.81898         osd.54        down  1.00000          1.00000 
 55  1.81898         osd.55        down  1.00000          1.00000 
 -8 20.43398 root default~ssd                                     
 -2 12.05498     host cpach~ssd                                   
 10  0.93100         osd.10        down        0          1.00000 
 -7  4.65500     host stud~ssd                                    
 23  0.93100         osd.23        down        0          1.00000 
 38  0.93100         osd.38        down  1.00000          1.00000 
 39  0.93100         osd.39        down  1.00000          1.00000 
 40  0.93100         osd.40        down  1.00000          1.00000 
 41  0.93100         osd.41        down  1.00000          1.00000 
 -1 84.11198 root default                                         
 -4 24.78899     host cpach                                       
 10  0.93100         osd.10        down        0          1.00000 
 -6 30.12700     host stud                                        
 23  0.93100         osd.23        down        0          1.00000 
 38  0.93100         osd.38        down  1.00000          1.00000 
 39  0.93100         osd.39        down  1.00000          1.00000 
 40  0.93100         osd.40        down  1.00000          1.00000 
 41  0.93100         osd.41        down  1.00000          1.00000 
 42  1.81898         osd.42        down  1.00000          1.00000 
 43  1.81898         osd.43        down  1.00000          1.00000 
 44  1.81898         osd.44        down  1.00000          1.00000 
 45  1.81898         osd.45        down  1.00000          1.00000 
 46  1.81898         osd.46        down  1.00000          1.00000 
 47  1.81898         osd.47        down  1.00000          1.00000 
 48  1.81898         osd.48        down  1.00000          1.00000 
 49  1.81898         osd.49        down  1.00000          1.00000 
 50  1.81898         osd.50        down  1.00000          1.00000 
 51  1.81898         osd.51        down  1.00000          1.00000 
 52  1.81898         osd.52        down  1.00000          1.00000 
 53  1.81898         osd.53        down  1.00000          1.00000 
 54  1.81898         osd.54        down  1.00000          1.00000 
 55  1.81898         osd.55        down  1.00000          1.00000 

Actions #1

Updated by Sage Weil almost 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Sage Weil almost 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF