crush/CrushWrapper: make get_immediate_parent[_id] ignore per-class shadow hierarchy

Fixes: http://tracker.ceph.com/issues/20546
Signed-off-by: Sage Weil <sage@redhat.com>